hphp/test/slow/coeffects/reified-parse-1.php.expectf
Fatal error: You may not use reified generics of the class in a static method in %s on line 4
